--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ DB_PASS=your_mysql_password
 # admin user default credentials
 ADMIN_FIRSTNAME=Super
 ADMIN_LASTNAME=Admin
-ADMIN_EMAIL=admin@yourdomain.com
-ADMIN_PHONE=09123456789
+ADMIN_EMAIL=admin@carparking.com
+ADMIN_PHONE=09678451234
 ADMIN_PASSWORD=Qwerty12345
 
-# Email Configuration (Gmail SMTP)
+# Email Configuration Gmail SMTP
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=yourgmail@gmail.com
