Make application paths configurable to support different installations

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ DB_NAME=car_parking_rental_db
 DB_USER=your_mysql_username
 DB_PASS=your_mysql_password
 
+# Base URL - Change this to match your installation path
+# Examples: /Car-Parking-Rental, /parking, / (if installed in root)
+BASE_URL=/Car-Parking-Rental
+
 # admin user default credentials
 ADMIN_FIRSTNAME=Super
 ADMIN_LASTNAME=Admin
