add about background cover and edit .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 DB_HOST=localhost
 DB_NAME=car_parking_rental_db
-DB_USER=your_mysql_username
-DB_PASS=your_mysql_password
+DB_USER=your_mysql_username # e.g., root
+DB_PASS=your_mysql_password # By default, MySQL has no password for root user on local installations
 
 # Base URL - Change this to match your installation path
-# Examples: /Car-Parking-Rental, /parking, / (if installed in root)
+# Examples: /Car-Parking-Rental, /parking, / if installed in root
 BASE_URL=/Car-Parking-Rental
 
 # admin user default credentials
