Fix BASE_URL configuration for correct file system path

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ DB_USER=your_mysql_username # e.g., root
 DB_PASS=your_mysql_password # By default, MySQL has no password for root user on local installations
 
 # Base URL - Change this to match your installation path
-# Examples: /Car-Parking-Rental, /parking, / if installed in root
-BASE_URL=/Car-Parking-Rental
+# Examples: /Github/Car-Parking-Rental, /Car-Parking-Rental, /parking, / if installed in root
+BASE_URL=/Github/Car-Parking-Rental
 
 # admin user default credentials
 ADMIN_FIRSTNAME=Super
