--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
+# ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️erase the .example extension BASE URL COMMENTS and rename this file to .env
+# then update the values below as needed
+
 DB_HOST=localhost
 DB_NAME=car_parking_rental_db
 DB_USER=your_mysql_username # e.g., root
 DB_PASS=your_mysql_password # By default, MySQL has no password for root user on local installations
 
-# Base URL - Change this to match your installation path
+# Base URL - Change this to match installation path
 # Examples: /Github/Car-Parking-Rental, /Car-Parking-Rental, /parking, / if installed in root
 BASE_URL=/Github/Car-Parking-Rental
 
