--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️erase the .example extension BASE URL COMMENTS and rename this file to .env
+# ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️erase the .example extension BASE URL COMMENTS and rename this file to .env ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️
+# ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️erase the .example extension BASE URL COMMENTS and rename this file to .env ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️
 # then update the values below as needed
 
 DB_HOST=localhost
