--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ SMTP_PORT=587
 SMTP_USERNAME=yourgmail@gmail.com
 SMTP_PASSWORD=your_app_password
 SMTP_ENCRYPTION=tls
+
+# PayPal Configuration (Sandbox)
+PAYPAL_CLIENT_ID=your_paypal_sandbox_client_id
+PAYPAL_CLIENT_SECRET=your_paypal_sandbox_client_secret
+PAYPAL_ENVIRONMENT=sandbox
